--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,11 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/pageable
+    url: jdbc:postgresql://localhost:5432/proj
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
+
 
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
@@ -16,4 +17,12 @@ spring:
 logging:
   level:
     org:
-      springframework: INFO
+      springframework:
+        data:
+          jpa:
+            repository:
+              support:
+                JpaTransactionManager: DEBUG
+        orm:
+          jpa: DEBUG
+    org.hibernate: DEBUG
